[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Combat/Mob2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Mob2/mob2oo.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Mob2/mob2uhh.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mob2/Mob2Ded.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Mob2/mob2sed.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Mob2/Mob2Sad.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Mob2/Picture1_11.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Aggro",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 27.7128, 27.2277 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 250.904

[node name="Mob2" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "Aggro"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 1, -3 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

rect = Rect2( -10, -10, 20, 20 )

[node name="AfterShoot" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="DeadTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Position2D" type="Position2D" parent="." index="5"]

position = Vector2( 52.601, 0 )

[node name="Area2D" type="Area2D" parent="." index="6"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

visible = false
shape = SubResource( 3 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[connection signal="timeout" from="AfterShoot" to="." method="_on_AfterShoot_timeout"]

[connection signal="timeout" from="DeadTimer" to="." method="_on_DeadTimer_timeout"]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]


